--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import PicRuisu from "../components/PicRuisu";
 import Layout from "../layouts/Layout.astro";
-import { Image } from "astro:assets";
 import myImage from "../assets/Ruisu/Ruisu2.jpg";
 import Picture from "astro/components/Picture.astro";
 import ExperienceTabs from "../components/ExperienceTabs";
@@ -44,7 +43,7 @@ import Contact from "../components/Contact";
             <span class="font-bold">Hi👋, My name is Luis Campos </span>,and and
             I am a developer who likes programming to create something new and I
             always have fun in the process. I started in the development world 2
-            years ago in 2022 with web programming and I have progressed by
+            years ago in 2022 |th web programming and I have progressed by
             carrying out different projects until a company hired me. <span
               class="font-bold"
             >
@@ -82,7 +81,7 @@ import Contact from "../components/Contact";
         </div>
 
         <figure class="flex items-center justify-center lg:w-1/3 xs:w-full">
-          <PicRuisu client:load>
+          <PicRuisu client:only="react">
             <Picture
               src={myImage}
               class={"rounded-xl"}
@@ -121,7 +120,7 @@ import Contact from "../components/Contact";
           </h1>
         </div>
       </div>
-      <ExperienceTabs client:load />
+      <ExperienceTabs client:only="react" />
     </div>
     <div id="Contenido 3" class="md:px-32 lg:px-56 xs:px-2 h-70">
       <div class="flex flex-row mt-20 my-4 justify-center items-center py-2">
@@ -146,7 +145,7 @@ import Contact from "../components/Contact";
           </h1>
         </div>
       </div>
-      <Projects client:load />
+      <Projects client:only="react" />
     </div>
     <!-- id="Contenido 4" -->
     <div id="Contenido 4" class="md:px-32 lg:px-56 xs:px-2 h-70">
@@ -172,9 +171,7 @@ import Contact from "../components/Contact";
           </h1>
         </div>
       </div>
-      <Contact client:load />
+      <Contact client:only="react" />
     </div>
   </div>
 </Layout>
-
-
