--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -120,7 +120,7 @@ import Contact from "../components/Contact";
           </h1>
         </div>
       </div>
-      <ExperienceTabs client:idle />
+      <ExperienceTabs client:load/>
     </div>
     <div id="Contenido 3" class="md:px-32 lg:px-56 xs:px-2 h-70">
       <div class="flex flex-row mt-20 my-4 justify-center items-center py-2">
