--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Picture from "astro/components/Picture.astro";
 import ExperienceTabs from "../components/ExperienceTabs";
 import Projects from "../components/Projects";
 import Contact from "../components/Contact";
+import "../index.css"
 ---
 
 <Layout title="Portfolio">
