--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Picture from "astro/components/Picture.astro";
 import ExperienceTabs from "../components/ExperienceTabs";
 import Projects from "../components/Projects";
 import Contact from "../components/Contact";
-import "../index.css"
+import "../index.css";
 ---
 
 <Layout title="Portfolio">
@@ -26,7 +26,7 @@ import "../index.css"
         >
         </div>
         <div
-          class="divider w-4/5 dark:divider-primary after:border-primary-content before:border-primary-content xs:flex md:hidden lg:after:border-t-8 lg:before:border-t-8 xs:after:border-t-4 xs:before:border-t-4"
+          class="divider w-full dark:divider-primary after:border-primary-content before:border-primary-content xs:flex md:hidden lg:after:border-t-8 lg:before:border-t-8 xs:after:border-t-4 xs:before:border-t-4"
         >
           <h1
             id="about"
@@ -111,7 +111,7 @@ import "../index.css"
         >
         </div>
         <div
-          class="divider w-4/5 dark:divider-primary after:border-primary-content before:border-primary-content xs:flex md:hidden lg:after:border-t-8 lg:before:border-t-8 xs:after:border-t-4 xs:before:border-t-4"
+          class="divider w-full dark:divider-primary after:border-primary-content before:border-primary-content xs:flex md:hidden lg:after:border-t-8 lg:before:border-t-8 xs:after:border-t-4 xs:before:border-t-4"
         >
           <h1
             id="experience"
@@ -121,7 +121,7 @@ import "../index.css"
           </h1>
         </div>
       </div>
-      <ExperienceTabs client:load/>
+      <ExperienceTabs client:load />
     </div>
     <div id="Contenido 3" class="md:px-32 lg:px-56 xs:px-2 h-70">
       <div class="flex flex-row mt-20 my-4 justify-center items-center py-2">
@@ -136,7 +136,7 @@ import "../index.css"
         >
         </div>
         <div
-          class="divider w-4/5 dark:divider-primary after:border-primary-content before:border-primary-content xs:flex md:hidden lg:after:border-t-8 lg:before:border-t-8 xs:after:border-t-4 xs:before:border-t-4"
+          class="divider w-full dark:divider-primary after:border-primary-content before:border-primary-content xs:flex md:hidden lg:after:border-t-8 lg:before:border-t-8 xs:after:border-t-4 xs:before:border-t-4"
         >
           <h1
             id="projects"
@@ -162,7 +162,7 @@ import "../index.css"
         >
         </div>
         <div
-          class="divider w-4/5 dark:divider-primary after:border-primary-content before:border-primary-content xs:flex md:hidden lg:after:border-t-8 lg:before:border-t-8 xs:after:border-t-4 xs:before:border-t-4"
+          class="divider w-full dark:divider-primary after:border-primary-content before:border-primary-content xs:flex md:hidden lg:after:border-t-8 lg:before:border-t-8 xs:after:border-t-4 xs:before:border-t-4"
         >
           <h1
             id="contact"
